verif/test/deca/codegen/invalid/logiques/bool-arithm-verif.res
src/test/deca/codegen/invalid/logiques/bool-arithm.deca:11:7: Incompatible types for binary operation: boolean and int
